# mail2feed

./: .gitignore  AGENTS.md  BACKGROUND_API.md  CLAUDE.md  README.md  RELEASE.md  SETUP_COMPLETE.md  docker-compose.yml  init-postgres.sql
.github/: dependabot.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  diesel.toml
backend/migrations/2024-01-01-000001_create_initial_tables/: down.sql
backend/migrations/2025-08-08-235402_add_email_actions_and_feed_retention/: down.sql  up.sql
backend/migrations/2025-08-09-125948_add_default_email_handling_to_imap_accounts/: down.sql
backend/migrations_postgres/2024-01-01-000001_create_initial_tables/: down.sql  up.sql
backend/migrations_postgres/2025-08-08-235402_add_email_actions_and_feed_retention/: up.sql
backend/migrations_postgres/2025-08-09-125948_add_default_email_handling_to_imap_accounts/: up.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/routes/: background.rs  email_rules.rs  feeds.rs  health.rs  imap_accounts.rs  imap_operations.rs  mod.rs
backend/src/background/: cleanup.rs  config.rs  control.rs  mod.rs  scheduler.rs  service.rs
backend/src/db/: connection.rs  mod.rs  models.rs  operations.rs  operations_generic.rs  operations_pg.rs  schema.rs
backend/src/feed/: generator.rs  mod.rs
backend/src/imap/: client.rs  crlf_wrapper.rs  mod.rs  processor.rs  protocol_compat.rs
backend/tests/: api_endpoints.rs  db_operations.rs  duplicate_detection.rs  email_actions_cleanup.rs  imap_functionality.rs
backend/tests/common/: mod.rs
frontend/: Dockerfile  (+10 more)
(+96 files in other folders)
