[package]
name = "mail2feed-backend"
version = "0.1.0"
edition = "2021"
default-run = "mail2feed-backend"

[dependencies]
# Web framework
axum = "0.6.20"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Database - using diesel for multi-database support
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"
dotenvy = "0.15"

# Email/IMAP  
async-imap = "0.9"
native-tls = "0.2"
futures = "0.3"
async-native-tls = "0.5"

# Feed generation
rss = "2.0"
atom_syndication = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"

# For async diesel operations
deadpool-diesel = { version = "0.5", features = ["sqlite"] }

[[bin]]
name = "process_emails"
path = "src/bin/process_emails.rs"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
